--- a/shared/package.json
+++ b/shared/package.json
@@ -40,7 +40,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.11",
+    "@types/axios": "^0.14.0",
     "@types/lodash": "^4.14.191",
     "axios": "^1.3.4",
     "lodash": "^4.17.21",
